--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,11 @@
   }
 }
 
+.no-scroll {
+  overflow: hidden;
+  height: 100vh;
+}
+
 html,
 body {
   max-width: 100vw;
@@ -22,6 +27,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+ul {
+  list-style: none;
 }
 
 * {
@@ -48,6 +57,7 @@ a {
 }
 
 .header {
+  display: flex;
   background: linear-gradient(135deg, #ffb6c1, #ff69b4);
   color: #fff;
   padding: 1rem 0;
@@ -55,12 +65,12 @@ a {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   position: sticky;
   top: 0;
-  z-index: 10;
 }
 
 .header .logo {
   font-size: 2.5rem;
   font-weight: 700;
+  max-width: 90%;
 }
 
 .nav {
@@ -82,4 +92,9 @@ a {
 
 .nav a:hover {
   background-color: rgba(255, 255, 255, 0.2);
+}
+
+.menuBtn {
+  position: absolute;
+  right: 10px;
 }
