--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -21,9 +21,11 @@
   border-radius: 2px;
 }
 
-.view {
-  width: 50%;
-  margin: 0 auto;
+@media screen and (width >= 768px) {
+  .view {
+    width: 50%;
+    margin: 0 auto;
+  }
 }
 
 .hero-img {
